--- a/templates/topic.html
+++ b/templates/topic.html
@@ -198,6 +198,7 @@
 <script>
 let currentTopic = "{{ topic.title }}";
 let isAIFullscreen = false;
+let isCodeFullscreen = false;
 
 function toggleAIFullscreen() {
     const topicSection = document.getElementById('topic-section');
